--- a/Blog/blogdir/20231014.md
+++ b/Blog/blogdir/20231014.md
@@ -1,6 +1,6 @@
 ## 20231014CMake学习心得（回顾）
 
-> 本篇文章主要记录之M前对cmake的一些学习心得（还在持续学习中）
+> 本篇文章主要记录之前对CMake的一些学习心得（还在持续学习中）
 
 [Back to Blog Site](../index.html)
 
@@ -13,5 +13,101 @@ CMake是一个跨平台的开源构建工具，用于管理软件项目的构建
 其实回想我们最早大一大二学习C语言和数据结构（C语言版）使用的工具时Visio Studio、Code::Blocks或Devc++这种IDE（集成开发环境），并没有用到CMake，这是为什么呢？当时我们涉及的代码很简单，往往不需要去考虑代码的结构，也很少涉及第三方库的调用、跨平台的要求等，使用更为继成但灵活性较差的IDE会帮我们省下不少理解代码到二进制文件过程的时间，更关注于对语法和数据结构的学习。
 
 从我们写的`.cpp`代码，到一个可执行文件，之间涉及了预处理、编译、汇编、链接、可执行文件的生成等多个步骤。中间的每一个步骤都是必不可少的，而执行这些步骤是需要我们进行一些操作的，指定他们如何预处理、编译等，上面的IDE其实就帮我们进行了很多指定操作。你可以理解成在终端中执行了很多类似于`g++ *.cpp`的编译语句（当然不仅于此）。而这些语句（这些指定操作），通过IDE并不够灵活，不能满足实际工程设计部署的需要。对程序员而言更灵活的方式自然是手动进行这些指定操作，但工作量极为庞大，需要有更灵活且更方便的工具。在CMake之前，有make这种脚本式工具（写`makefile`脚本规定操作），但依然不够方便。CMake在此基础上应运而生，以一种更上层的方式生成make等脚本，从而使得开发人员可以更方便地构建、测试和部署他们的代码。
+
+### 通过一个项目的CMakeLists.txt文件来学习CMake
+
+> 学习之前，需要注意`CMake`的大小写，包括在C++项目中`CMake`中的最重要的文件`CMakeLists.txt`的大小写，不然会出现错误。
+>
+> 另外，CMake的安装通过包管理器（apt, yum等）很方便，在这里不赘述。
+
+我用的是最近科研上开发的C++项目：EMM（Encrypted Multi-Maps)作为举例，其采用CMake进行组织构建。
+
+#### 项目根目录下的CMakeLists.txt该写什么
+
+> 对项目根目录下CMakeLists.txt文件的不同区域，通过写注释来进行学习和解释CMake语法和用法。
+
+###### 项目最小版本
+
+```cmake
+cmake_minimum_required(VERSION 3.14)
+```
+**必须放置**，规定需要的CMake软件的最小版本，如果小于该版本则不会进行构建
+这里的`VERSION`值的不是本机的`CMAKE_VERSION`，可以看作`3.14`的类型是版本号
+
+###### 项目信息（名称，版本，语言）
+
+```cmake
+project(EMM VERSION 0.0.0 LANGUAGES CXX)
+```
+项目的规定，在后面需要用到的，这里我们声明了项目名`EMM`, 该项目的版本号为"`0.0.0`", 采用的语言是`C++`(`CXX` 在CMake中代表的是`C++`)。
+在CMake中规定了一些其他语言的名称：
+
+- `C`：C编程语言。
+- `Fortran`：Fortran编程语言。
+- `ASM`：汇编语言。
+- `Swift`：Swift编程语言。
+- `OBJC`：Objective-C编程语言。
+- `OBJCXX`：Objective-C++编程语言。
+
+```cmake
+if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
+	cmake_policy(SET CMP0135 NEW)
+endif()
+```
+首先，它检查CMake的版本是否大于等于`3.24.0`，使用`CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0"`进行比较。
+`if`是判断的语句，用法是:
+
+> 需要注意的是`endif()`在判断语句的最后是要加入的。
+
+```cmake
+if(condition1)
+    # condition1 为真时执行的操作
+elseif(condition2)
+    # condition2 为真时执行的操作
+elseif(condition3)
+    # condition3 为真时执行的操作
+else()
+    # 所有条件都为假时执行的操作
+endif()
+```
+
+`CMAKE_VERSION`是一个字符串，由两个`.`隔开有三个部分，
+
+`VERSION_GREATER_EQUAL`是CMake里的版本判断操作符，操作包括： `VERSION_LESS`, `VERSION_GREATER`, `VERSION_EQUAL`, `VERSION_LESS_EQUAL`, or `VERSION_GREATER_EQUAL` 。
+
+如果成立返回1，不成立返回0。
+
+对执行的条件`cmake_policy(SET CMP0135 NEW)`，是3.24版本后的新特性，
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror")
+#We need to disable stringop-overflow because of a flatbuffers issue: https://github.com/google/flatbuffers/issues/7366
+if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-stringop-overflow")
+endif()
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -fsanitize=address,undefined -fno-omit-frame-pointer")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
+
+message(STATUS "Compiler: ${CMAKE_CXX_COMPILER_ID} ${CMAKE_CXX_COMPILER_VERSION}")
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "CXX flags: ${CMAKE_CXX_FLAGS}")
+message(STATUS "CXX flags Debug: ${CMAKE_CXX_FLAGS_DEBUG}")
+message(STATUS "CXX flags Release: ${CMAKE_CXX_FLAGS_RELEASE}")
+
+include(FetchContent)
+
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+```
+
+
+
 
 ### 未完待续...
